--- a/cic/so/dekker/simulador.html
+++ b/cic/so/dekker/simulador.html
@@ -39,23 +39,32 @@ Roadmap:
             <div class="panel-body">
               <span id="btn-ui-expand" class="pull-right glyphicon glyphicon-resize-full"></span>
               <h3>Algorítmo de Dekker</h3>
-
+              <h4>Tabela de Variáveis</h4>
               <table class="table">
                 <tr>
                   <th style="width: 50%">Variável</th>
                   <th style="width: 50%">Valor</th>
                 </tr>
                 <tr>
-                  <td>flag</td><td>[ <span id="var-flag-0" class="kw kw-false">false</span> , <span id="var-flag-1" class="kw kw-false">false</span> ]</td>
+                  <td>flag</td><td>[ <span id="var-flag-0"></span> , <span id="var-flag-1"></span> ]</td>
                 </tr>
                 <tr>
                   <td>vez</td><td id="var-turn"></td>
                 </tr>
               </table>
-              <div id="btn-step-wrap" class="col-md-12 hidden">
-                <span class="pull-right">
-                  <button class="btn btn-success">Step</button>
-                </span>
+              <div class="col-md-12">
+                <div class="row">
+                  <div id="btn-step-wrap" class="">
+                    <span class="pull-right">
+                      <button class="btn btn-success">Step</button>
+                    </span>
+                  </div>
+                  <div id="btn-auto-wrap" class="">
+                    <span class="pull-right">
+                      <button class="btn btn-warning">Auto</button>
+                    </span>
+                  </div>
+                </div>
               </div>
               <!-- editor contendo processo 1 -->
               <div class="row">
@@ -108,6 +117,39 @@ Roadmap:
               <!-- summary -->
               <ul id="summary">
               </ul>
+              <h4>Configurações</h4>
+              <ul class="list-group">
+                <li class="list-group-item">
+                  <div class="form-group">
+                    <label>Velocidade de Execução (ms)</label>
+                    <input id="ip-exec-vel" type="number" class="form-control" value="" placeholder="(mínimo 100 ms)">
+                  </div>
+                </li>
+                <li class="list-group-item">
+                  <div class="form-group">
+                    <label>Tipo de Execução</label>
+                    <select class="form-control">
+                      <option value="">Monoprogramado</option>
+                      <option value="" disabled>Multiprogramado</option>
+                    </select>
+                  </div>
+                </li>
+              </ul>
+              <h4>Memória</h4>
+              <div class="form-group">
+                <textarea id="ta-dump" class="form-control"></textarea>
+                <span class="help-block">
+                  <p>É possível salvar um estado de máquina para utilizar mais tarde</p>
+                  <p id="ui-mem-err-msg" style="color: red;"></p>
+                </span>
+              </div>
+              <div class="form-group">
+                <center>
+                  <button id="btn-dump" class="btn btn-default"><span class="glyphicon glyphicon-download"></span>Dump</button>
+                  <button id="btn-restore" class="btn btn-default"><span class="glyphicon glyphicon-upload"></span>Restaurar</button>
+                </center>
+              </div>
+              <!-- <h4>Sobre</h4> -->
             </div>
           </div>
         </div>
@@ -116,204 +158,6 @@ Roadmap:
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="static/highlight/highlight.pack.js"></script>
-    <script>
-      $(document).ready(function(){
-
-        // UI of code editor
-        var cedit = {
-
-          c_line_el: [null, null],
-          root_el: [$('#editor-1'), $('#editor-2')],
-
-          set_current_line: function(root_id, line_no){
-            var c_line_el = this.c_line_el[root_id];
-            if (c_line_el != null){
-              $(c_line_el).removeClass('line-cur');
-
-            }
-            cur_lo = $(cedit.root_el[root_id]).find('span:nth-child(' + (line_no + 1) + ')');
-            cur_lo.addClass('line-cur');
-            this.c_line_el[root_id] = cur_lo;
-          },
-          init: function(){
-            // for each code wrapper, call highlight.js
-            $('pre code.c').each(function(){
-              hljs.highlightBlock(this);
-            });
-          }
-        }
-
-        var alg = {
-          cur_proc: 0,
-          proc_vars: [
-            {i: 0, j: 1},
-            {i: 1, j: 0}
-          ],
-          flag: [false, false],
-          turn: 0,
-          engine: null,
-
-          set_turn: function(val){
-            alg.turn = val;
-            $('#var-turn').text(
-              'Processo ' + (val + 1)
-            );
-          },
-          set_flag: function(id, val){
-            alg.flag[id] = val;
-            $('#var-flag-' + id).html(
-              val ? '<span class="kw kw-true">true</span>' : 
-                '<span class="kw kw-false">false</span>'
-            );
-          },
-          get_var: function(var_name){
-            var mem = alg.proc_vars[alg.cur_proc];
-            return mem[var_name];
-          },
-          2: function(){alg.set_flag(alg.cur_proc, true);},
-          3: function(){
-            var j = alg.get_var('j');
-            // the default behavior is go to the next line
-            if (alg.flag[j] != false){} else {
-              // else it will jump
-              alg.engine.jump(11);
-            }
-          },
-          5: function(){
-            if (alg.turn == alg.get_var('j')){
-              // continue
-            } else {
-              alg.engine.jump(3);
-            }
-          },
-          6: function(){
-            alg.set_flag(alg.get_var('i'), false);
-          },
-          7: function(){
-            if (alg.turn == alg.get_var('j')){
-              alg.engine.jump(7);
-            }
-          },
-          8: function(){
-            alg.set_flag(alg.get_var('i'), true);
-          },
-          11: function(){
-          },
-          12: function(){
-            alg.set_turn(alg.get_var('j'));
-          },
-          13: function(){
-            alg.set_flag(alg.get_var('i'), false);
-          }
-        }
-
-        var smac = {
-          proc_mem: [
-            {cur_lno: -1},
-            {cur_lno: -1}
-          ],
-          pre_step_jobs: [],
-          last_proc: null,
-          cur_proc: 0,
-          cur_ed: null,
-          line_count: 15,
-          stepped: true,
-          // state machine
-          step: function(){
-
-            var cur_lno = (smac.proc_mem[smac.cur_proc].cur_lno + 1) % smac.line_count;
-
-            for (job_idx in smac.pre_step_jobs){
-              smac.pre_step_jobs[job_idx]();
-            }
-            smac.pre_step_jobs = [];
-
-            cedit.set_current_line(smac.cur_proc, cur_lno);
-            smac.proc_mem[smac.cur_proc].cur_lno = cur_lno;
-
-            if (alg[cur_lno] == undefined){
-                setTimeout(smac.step, 0);
-            } else {
-              alg[cur_lno]();
-              if (! smac.stepped){
-                setTimeout(smac.step, 500);
-              }
-              if (Math.random() > 0.5){
-                // will activate quantumm
-                alg.cur_proc = smac.cur_proc = 1 - smac.cur_proc;
-                smac.pre_step_jobs.push(function(){
-                  smac.set_current_proc(smac.cur_proc);
-                });
-              }
-            }            
-          },
-          jump: function(line){
-            smac.proc_mem[smac.cur_proc].cur_lno = line - 1;
-          },
-          init: function(){
-            smac.set_current_proc(smac.cur_proc);
-            if (! smac.stepped){
-              smac.step();
-            }
-            alg.engine = smac;
-            alg.set_turn(alg.turn);
-          },
-          set_current_proc: function(id){
-            if (smac.last_proc != null){
-              $('#title-proc-' + (smac.last_proc+1)).removeClass('active');
-            }
-            $('#title-proc-' + (id+1)).addClass('active');
-            smac.last_proc = id;
-
-            $('div.editor.editor-wrap pre').each(function(){
-              if ($(this).attr('id').indexOf('-' + (id+1)) >= 0){
-                $(this).removeClass('paused');
-              } else {
-                $(this).addClass('paused');
-              }
-            });
-          }
-        }
-
-        // UI outside editor
-        var ui = {
-          is_expanded: false,
-
-          on_expand_click: function(){
-          if (ui.is_expanded){
-            $('div.editor.editor-wrap').each(function(){
-              $(this).removeClass('col-md-6');
-              $(this).addClass('col-md-12');
-            });
-            $('#content-main-window').attr('class', 'col-md-6 col-md-offset-3');
-          } else {
-            $('div.editor.editor-wrap').each(function(){
-              $(this).removeClass('col-md-12');
-              $(this).addClass('col-md-6');
-            });
-            $('#content-main-window').attr('class', 'col-md-12');  
-          }
-          ui.is_expanded = ! ui.is_expanded;
-          },
-
-          init: function(){
-            // bind btn click
-            $('#btn-ui-expand').on('click', ui.on_expand_click);
-          }
-        }
-
-        if (smac.stepped){
-          btn = $('#btn-step-wrap');
-          btn.removeClass('hidden');
-          btn.on('click', smac.step);
-        }
-
-        cedit.init();
-        smac.cur_ed = cedit;
-        smac.init();
-        ui.init();
-
-      });
-    </script>
+    <script src="simulador.js"></script>
   </body>
 </html>
