[ui] better view of current executed line

--- a/cic/so/dekker/simulador.html
+++ b/cic/so/dekker/simulador.html
@@ -21,6 +21,7 @@ Roadmap:
       div.content-main {margin: 1em 0em 0em 0em;}
       span.line.line-cur {background-color: #fcfc92;}
       span.line.line-cur.info {background-color: #84ffea;}
+      span.line.line-cur.line-paused {background-color: #d4d6d8;}
       span.ui.ui-title.active {font-weight: bold;}
       div.editor.editor-wrap pre.paused {opacity: 0.75;}
       span.kw.kw-true {color: green;}
@@ -43,7 +44,7 @@ Roadmap:
           <div class="panel panel-default">
             <div class="panel-body">
               <span id="btn-ui-expand" class="pull-right glyphicon glyphicon-resize-full"></span>
-              <h3>Algorítmo de Dekker</h3>
+              <h3>Algoritmo de Dekker</h3>
               <h4>Tabela de Variáveis</h4>
               <table class="table">
                 <tr>
