[add] [feature] quantum button
Now the user has control when the quantum is activated.
Auto will trigger quantum randomly
Step only advances on current process

--- a/cic/so/dekker/simulador.html
+++ b/cic/so/dekker/simulador.html
@@ -62,12 +62,17 @@ Roadmap:
               </table>
               <div class="col-md-12">
                 <div class="row">
-                  <div id="btn-step-wrap" class="">
+                  <div id="btn-quantm-wrap">
+                    <span class="pull-right">
+                      <button class="btn btn-info">Quantum</button>
+                    </span>
+                  </div>
+                  <div id="btn-step-wrap">
                     <span class="pull-right">
                       <button class="btn btn-success">Step</button>
                     </span>
                   </div>
-                  <div id="btn-auto-wrap" class="">
+                  <div id="btn-auto-wrap">
                     <span class="pull-right">
                       <button class="btn btn-warning">Auto</button>
                     </span>
