[postpone] [feature] hide html for execution mode
Implementing execution probably requires many changes that will
break the entire code - thus rewriting.
We want to prepare for a release soon, so we'll hide this feature.

--- a/cic/so/dekker/simulador.html
+++ b/cic/so/dekker/simulador.html
@@ -138,6 +138,7 @@ Roadmap:
                     <input id="ip-exec-vel" type="number" class="form-control" value="" placeholder="(mínimo 100 ms)">
                   </div>
                 </li>
+                <!-- @future.feature
                 <li class="list-group-item">
                   <div class="form-group">
                     <label>Tipo de Execução</label>
@@ -147,6 +148,7 @@ Roadmap:
                     </select>
                   </div>
                 </li>
+                -->
               </ul>
               <div id="sec-mem" class="sec hidden">
                 <h4>Memória</h4>
