[add][ux] [feature] reset button
Identical to press F5. For some users it wil be more intuitive.

--- a/cic/so/dekker/simulador.html
+++ b/cic/so/dekker/simulador.html
@@ -77,6 +77,11 @@ Roadmap:
                       <button class="btn btn-warning">Auto</button>
                     </span>
                   </div>
+                  <div id="btn-reset-wrap">
+                    <span class="pull-right">
+                      <button class="btn btn-danger">Reset</button>
+                    </span>
+                  </div>
                 </div>
               </div>
               <!-- editor contendo processo 1 -->
